added search products
