# app/Http/Controllers/Api/V1/ProductApiController.php
@@ -323,4 +323,45 @@ class ProductApiController extends Controller
             ],
         ]);
     }
+
+    /**
+     * @OA\Post(
+     ** path="/api/v1/search_product",
+     *  tags={"Products Page"},
+     *  description="search product",
+     *    @OA\RequestBody(
+     *    required=true,
+     *          @OA\MediaType(
+     *           mediaType="multipart/form-data",
+     *           @OA\Schema(
+     *           @OA\Property(
+     *                  property="search",
+     *                  type="string",
+     *               ),
+     *     )
+     *   )
+     * ),
+     *   @OA\Response(
+     *      response=200,
+     *      description="Its Ok",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   )
+     *)
+     **/
+    public function search_product(Request $request)
+    {
+        return response()->json([
+            'result' => true,
+            'message' => 'application products page',
+            'data' => [
+                Keys::brands => Brand::getAllBrands(),
+                Keys::searched_products => ProductRepository::searchedProduct($request->input('search'))
+                    ->response()
+                    ->getData(true),
+            ]
+
+        ], 200);
+    }
 }
